force-app/main/default/objects/Catalogue_Settings__c/Catalogue_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Catalogue Settings</label>
</CustomObject>