force-app/main/default/objects/Catalogue_Settings__c/fields/A90__c.field-meta.xml
<CustomField>
    <fullName>A90__c</fullName>
    <label>A90</label>
    <length>250</length>
    <type>Text</type>
</CustomField>