force-app/main/default/objects/Catalogue_Settings__c/fields/A91__c.field-meta.xml
<CustomField>
    <fullName>A91__c</fullName>
    <label>A91</label>
    <length>250</length>
    <type>Text</type>
</CustomField>