force-app/main/default/objects/Catalogue_Settings__c/fields/CatalogueWSURL__c.field-meta.xml
<CustomField>
    <fullName>CatalogueWSURL__c</fullName>
    <label>Catalogue WS URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>