force-app/main/default/objects/Catalogue_Settings__c/fields/Consumer__c.field-meta.xml
<CustomField>
    <fullName>Consumer__c</fullName>
    <label>Consumer</label>
    <length>25</length>
    <type>Text</type>
</CustomField>