force-app/main/default/objects/Catalogue_Settings__c/fields/Digital_Store_List_Other_Price__c.field-meta.xml
<CustomField>
    <fullName>Digital_Store_List_Other_Price__c</fullName>
    <description>List of digital store that get price from atg and not  from sap</description>
    <label>Digital Store List Other Price</label>
    <length>250</length>
    <type>Text</type>
</CustomField>