force-app/main/default/objects/Catalogue_Settings__c/fields/Digital_Stores__c.field-meta.xml
<CustomField>
    <fullName>Digital_Stores__c</fullName>
    <label>Digital Stores</label>
    <type>TextArea</type>
</CustomField>