force-app/main/default/objects/Catalogue_Settings__c/fields/F90__c.field-meta.xml
<CustomField>
    <fullName>F90__c</fullName>
    <label>F90</label>
    <length>250</length>
    <type>Text</type>
</CustomField>