force-app/main/default/objects/Catalogue_Settings__c/fields/F91__c.field-meta.xml
<CustomField>
    <fullName>F91__c</fullName>
    <label>F91</label>
    <length>250</length>
    <type>Text</type>
</CustomField>