force-app/main/default/objects/Catalogue_Settings__c/fields/G90__c.field-meta.xml
<CustomField>
    <fullName>G90__c</fullName>
    <label>G90</label>
    <length>250</length>
    <type>Text</type>
</CustomField>