force-app/main/default/objects/Catalogue_Settings__c/fields/Header1__c.field-meta.xml
<CustomField>
    <fullName>Header1__c</fullName>
    <label>Header1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>