force-app/main/default/objects/Catalogue_Settings__c/fields/I91__c.field-meta.xml
<CustomField>
    <fullName>I91__c</fullName>
    <label>I91</label>
    <length>250</length>
    <type>Text</type>
</CustomField>