force-app/main/default/objects/Catalogue_Settings__c/fields/I92__c.field-meta.xml
<CustomField>
    <fullName>I92__c</fullName>
    <label>I92</label>
    <length>250</length>
    <type>Text</type>
</CustomField>