force-app/main/default/objects/Catalogue_Settings__c/fields/I93__c.field-meta.xml
<CustomField>
    <fullName>I93__c</fullName>
    <label>I93</label>
    <length>250</length>
    <type>Text</type>
</CustomField>