force-app/main/default/objects/Catalogue_Settings__c/fields/IntegPassword__c.field-meta.xml
<CustomField>
    <fullName>IntegPassword__c</fullName>
    <description>hold the password for the integration user</description>
    <label>Integ Password</label>
    <length>20</length>
    <type>Text</type>
</CustomField>