force-app/main/default/objects/Catalogue_Settings__c/fields/IntegUsername__c.field-meta.xml
<CustomField>
    <fullName>IntegUsername__c</fullName>
    <description>hold the username used to make the WS call</description>
    <label>Integ Username</label>
    <length>20</length>
    <type>Text</type>
</CustomField>