force-app/main/default/objects/Catalogue_Settings__c/fields/J90__c.field-meta.xml
<CustomField>
    <fullName>J90__c</fullName>
    <label>J90</label>
    <length>250</length>
    <type>Text</type>
</CustomField>