force-app/main/default/objects/Catalogue_Settings__c/fields/K90__c.field-meta.xml
<CustomField>
    <fullName>K90__c</fullName>
    <label>K90</label>
    <length>250</length>
    <type>Text</type>
</CustomField>