force-app/main/default/objects/Catalogue_Settings__c/fields/L36__c.field-meta.xml
<CustomField>
    <fullName>L36__c</fullName>
    <label>L36</label>
    <length>250</length>
    <type>Text</type>
</CustomField>