force-app/main/default/objects/Catalogue_Settings__c/fields/Max_stores_for_search__c.field-meta.xml
<CustomField>
    <fullName>Max_stores_for_search__c</fullName>
    <label>Max stores for search</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>