force-app/main/default/objects/Catalogue_Settings__c/fields/NE1__c.field-meta.xml
<CustomField>
    <fullName>NE1__c</fullName>
    <label>NE1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>