force-app/main/default/objects/Catalogue_Settings__c/fields/NF3__c.field-meta.xml
<CustomField>
    <fullName>NF3__c</fullName>
    <label>NF3</label>
    <length>250</length>
    <type>Text</type>
</CustomField>