force-app/main/default/objects/Catalogue_Settings__c/fields/NM5__c.field-meta.xml
<CustomField>
    <fullName>NM5__c</fullName>
    <label>NM5</label>
    <length>250</length>
    <type>Text</type>
</CustomField>