force-app/main/default/objects/Catalogue_Settings__c/fields/NM7__c.field-meta.xml
<CustomField>
    <fullName>NM7__c</fullName>
    <label>NM7</label>
    <length>255</length>
    <type>Text</type>
</CustomField>