force-app/main/default/objects/Catalogue_Settings__c/fields/Number_Of_New_Porducts__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_New_Porducts__c</fullName>
    <label>Number Of New Porducts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>