force-app/main/default/objects/Catalogue_Settings__c/fields/OptionalHeadersNum__c.field-meta.xml
<CustomField>
    <fullName>OptionalHeadersNum__c</fullName>
    <label>Optional Headers Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>