force-app/main/default/objects/Catalogue_Settings__c/fields/Password_WS_Stock__c.field-meta.xml
<CustomField>
    <fullName>Password_WS_Stock__c</fullName>
    <label>Password_WS_Stock</label>
    <length>250</length>
    <type>Text</type>
</CustomField>