force-app/main/default/objects/Catalogue_Settings__c/fields/Q92__c.field-meta.xml
<CustomField>
    <fullName>Q92__c</fullName>
    <label>Q92</label>
    <length>250</length>
    <type>Text</type>
</CustomField>