force-app/main/default/objects/Catalogue_Settings__c/fields/Q93__c.field-meta.xml
<CustomField>
    <fullName>Q93__c</fullName>
    <label>Q93</label>
    <length>250</length>
    <type>Text</type>
</CustomField>