force-app/main/default/objects/Catalogue_Settings__c/fields/treekitBaseUrl__c.field-meta.xml
<CustomField>
    <fullName>treekitBaseUrl__c</fullName>
    <label>treekitBaseUrl</label>
    <length>50</length>
    <type>Text</type>
</CustomField>