force-app/main/default/objects/Catalogue_Settings__c/fields/treekitPrivateKey__c.field-meta.xml
<CustomField>
    <fullName>treekitPrivateKey__c</fullName>
    <label>treekitPrivateKey</label>
    <length>32</length>
    <type>Text</type>
</CustomField>