force-app/main/default/objects/Catalogue_Settings__c/fields/UEC__c.field-meta.xml
<CustomField>
    <fullName>UEC__c</fullName>
    <label>UEC</label>
    <length>250</length>
    <type>Text</type>
</CustomField>