force-app/main/default/objects/Catalogue_Settings__c/fields/UnwantedStores__c.field-meta.xml
<CustomField>
    <fullName>UnwantedStores__c</fullName>
    <description>List of store codes that will not appear in the store list of catalog</description>
    <label>UnwantedStores</label>
    <type>TextArea</type>
</CustomField>