force-app/main/default/objects/Catalogue_Settings__c/fields/URZ__c.field-meta.xml
<CustomField>
    <fullName>URZ__c</fullName>
    <label>URZ</label>
    <length>250</length>
    <type>Text</type>
</CustomField>