force-app/main/default/objects/Catalogue_Settings__c/fields/V02__c.field-meta.xml
<CustomField>
    <fullName>V02__c</fullName>
    <label>V02</label>
    <length>250</length>
    <type>Text</type>
</CustomField>