force-app/main/default/objects/Catalogue_Settings__c/fields/Variations_Limit__c.field-meta.xml
<CustomField>
    <fullName>Variations_Limit__c</fullName>
    <defaultValue>200</defaultValue>
    <label>Variations_Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>