force-app/main/default/objects/Catalogue_Settings__c/fields/WS_ATG_Username__c.field-meta.xml
<CustomField>
    <fullName>WS_ATG_Username__c</fullName>
    <label>WS_ATG_Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>