force-app/main/default/objects/Catalogue_Settings__c/fields/WS_Price__c.field-meta.xml
<CustomField>
    <fullName>WS_Price__c</fullName>
    <label>WS_Price</label>
    <length>250</length>
    <type>Text</type>
</CustomField>