force-app/main/default/objects/Catalogue_Settings__c/fields/WSL__c.field-meta.xml
<CustomField>
    <fullName>WSL__c</fullName>
    <label>WSL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>